# devboss

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  database.py  enums.py  main.py  models.py  runtime_manager.py  schemas.py  seed.py  services.py  storage.py  workflow.py
backend/app/prompts/: ai_grooming.md  ai_testing.md  deployment.md  in_progress.md  ready_to_deploy.md
backend/devboss_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_runtime_manager.py  test_workflow.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/board/: page.tsx
frontend/app/engineers/: page.tsx
frontend/app/engineers/edit/: page.tsx
frontend/app/engineers/new/: page.tsx
frontend/app/guide/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: confirm-modal.tsx  forms.tsx  layout-shell.tsx  markdown-content.tsx  project-board-header.tsx  project-modal.tsx  setting-modal.tsx  task-actions.tsx  task-board.tsx  task-create-modal.tsx
frontend/content/: usage-guide.ts
frontend/lib/: api.ts  types.ts
runtime/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
runtime/runtime/: caveman_session_start.py  client.py  codex_home.py  config.py  executor.py  github.py  main.py  task_bundle.py  workspace.py
runtime/tests/: test_codex_home.py  test_executor.py
(+2 files in other folders)
