[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devboss-backend"
version = "0.1.0"
description = "Dev Boss FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.1",
  "docker>=7.1.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "python-multipart>=0.0.9",
  "httpx>=0.27.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
