[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devboss-runtime"
version = "0.1.0"
description = "Dev Boss engineer polling runtime"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.2",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*"]

